update footer design

--- a/ig/framework/_includes/footer.html
+++ b/ig/framework/_includes/footer.html
@@ -13,9 +13,9 @@
   <div class="container">  <!-- container -->
    <div class="inner-wrapper">
     <p>
-      {{site.data.fhir.igName}} Version: {{ site.data.fhir.ig.version }}  &reg;&copy; <a style="color: #81BEF7" href="{{ site.data.fhir.path }}">FHIR Version: {{ site.data.fhir.version }}</a> (IG Publisher v{{site.data.fhir.versionFull}}) generated on {{site.data.fhir.genDate}}.
-      | <a style="color: #81BEF7" href="https://gforge.hl7.org/gf/project/fhir/tracker/?action=TrackerItemAdd&amp;tracker_id=677">Propose a change</a>
-        <a style="color: #81BEF7" rel="license" href="{{site.data.fhir.path}}license.html"><img style="border-style: none;" alt="CC0" src="cc0.png"/></a>
+      {{site.data.fhir.igName}} Version: {{ site.data.fhir.ig.version }}  &reg;&copy; <a href="{{ site.data.fhir.path }}">FHIR Version: {{ site.data.fhir.version }}</a> (IG Publisher v{{site.data.fhir.versionFull}}) generated on {{site.data.fhir.genDate}}.
+      |
+        <a rel="license" href="{{site.data.fhir.path}}license.html"><img style="border-style: none;" alt="CC0" src="cc0.png"/></a>
         </span>
         </p>
    </div>  <!-- /inner-wrapper -->
