--- a/ig/framework/assets/css/project.css
+++ b/ig/framework/assets/css/project.css
@@ -279,6 +279,8 @@ body {
 }
 .breadcrumb {
   margin: 20px 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 .breadcrumb a {
   color: #555555;
@@ -415,6 +417,7 @@ p#publish-box {
   border: 1px solid #FDB81E;
   padding: 16px;
   margin: 24px 0;
+  max-width: none;
 }
 
 img#publish-box {
