--- a/dpc-web/app/views/shared/_head.html.erb
+++ b/dpc-web/app/views/shared/_head.html.erb
@@ -2,6 +2,8 @@
   <title>
     <%= content_for?(:title) ? yield(:title) : 'CMS.gov' %> | Data at the Point of Care
   </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
