--- a/dpc-web/app/views/layouts/pages.html.erb
+++ b/dpc-web/app/views/layouts/pages.html.erb
@@ -14,7 +14,7 @@
     </header>
 
     <!-- content -->
-    <section class="ds-l-container ds-u-padding-top--7">
+    <section class="ds-l-container ds-u-padding-top--7 ds-u-margin-bottom--7" id="main">
       <%= yield %>
     </section>
 
