create support page stub layout

--- a/dpc-web/app/views/pages/support.html.erb
+++ b/dpc-web/app/views/pages/support.html.erb
@@ -1,3 +1,9 @@
 <% title "Support" %>
 
-Support
+<h2>Join the google google</h2>
+
+<p>Duis rhoncus mi est, nec rhoncus velit eleifend sed. Ut varius, nulla eu viverra congue, ante lorem vehicula metus, sit amet facilisis est sem sit amet enim. Nullam quis auctor ex, a tincidunt lacus. Etiam vestibulum ultricies justo ut sollicitudin. Quisque non quam vel metus varius condimentum. Nam sit amet pellentesque nisl, eget aliquet ex. Donec id tincidunt ipsum, et posuere libero. Sed at elit ac leo elementum imperdiet at ac velit. Proin rhoncus tortor sit amet eros finibus tincidunt. Suspendisse potenti. Phasellus ac arcu faucibus, ornare magna non, suscipit tellus. Proin at vehicula ex. Sed dui nulla, bibendum congue felis at, scelerisque vulputate sem. Nulla mattis quis nibh eu varius. Aliquam gravida a nisl sit amet mattis. Pellentesque gravida blandit ante nec scelerisque.</p>
+
+<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris porttitor pellentesque luctus. Proin sagittis finibus velit, sit amet efficitur mauris vestibulum eu. Duis rhoncus nibh ipsum, sit amet pellentesque nisl luctus iaculis. Suspendisse metus ante, varius vel lacinia eget, rhoncus eget libero. Quisque ac nibh sagittis, tempus quam in, porta sem. Nullam sit amet tellus sem. Etiam et orci sit amet lorem rhoncus aliquet at vel eros. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam pellentesque suscipit lectus, eu suscipit turpis porttitor vel. Nulla in dictum eros. Nam sollicitudin faucibus iaculis.</p>
+
+<a href="#" class="ds-c-button ds-c-button--big">Join Google group</a>
