connect routes from landing page

--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -214,7 +214,7 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
             <use xlink:href="/assets/solid.svg#key"></use>
           </svg>Request access
         <% end %>
-        <%= link_to docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
+        <%= link_to support_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
           Join Google Group
         <% end %>
         </div>
