--- a/dpc-web/app/views/shared/_alerts.html.erb
+++ b/dpc-web/app/views/shared/_alerts.html.erb
@@ -1,2 +1,7 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if notice %>
+  <div><%= notice %></div>
+<% end %>
+
+<% if alert %>
+  <div><%= alert %></div>
+<% end %>
