--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,3 @@
-
-
 <h2>Sign up</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -12,6 +10,40 @@
   <div class="field">
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :organization %><br />
+    <%= f.text_field :organization, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address_1 %><br />
+    <%= f.text_field :address_1, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address_2 %><br />
+    <%= f.text_field :address_2, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :state %><br />
+    <%= f.select :state,
+          User::STATES.each_with_object([]) { |state, memo| memo << [state[1], state[0]] },
+          value: @user.state,
+          autofocus: true
+    %>
+  </div>
+
+  <div class="field">
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip, autofocus: true %>
   </div>
 
   <div class="field">
