--- a/dpc-web/app/views/shared/_head.html.erb
+++ b/dpc-web/app/views/shared/_head.html.erb
@@ -4,6 +4,7 @@
   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name=”robots” content=”noindex, follow”>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
