--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -1,72 +1,76 @@
-<h2>Sign up</h2>
+<% title "Sign up" %>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
+    <%= f.label :first_name, :class => "ds-c-label" %>
+    <%= f.text_field :first_name, autofocus: true, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
+    <%= f.label :last_name, :class => "ds-c-label" %>
+    <%= f.text_field :last_name, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :organization %><br />
-    <%= f.text_field :organization, autofocus: true %>
+    <%= f.label :organization, :class => "ds-c-label" %>
+    <%= f.text_field :organization, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :address_1 %><br />
-    <%= f.text_field :address_1, autofocus: true %>
+    <%= f.label :address_1, :class => "ds-c-label" %>
+    <%= f.text_field :address_1, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :address_2 %><br />
-    <%= f.text_field :address_2, autofocus: true %>
+    <%= f.label :address_2, :class => "ds-c-label" %>
+    <%= f.text_field :address_2, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
+    <%= f.label :city, :class => "ds-c-label" %>
+    <%= f.text_field :city, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :state %><br />
+    <%= f.label :state, :class => "ds-c-label" %>
     <%= f.select :state,
           User::STATES.each_with_object([]) { |state, memo| memo << [state[1], state[0]] },
-          value: @user.state,
-          autofocus: true
+          { },
+          :class => "ds-c-field",
+          value: @user.state
     %>
   </div>
 
   <div class="field">
-    <%= f.label :zip %><br />
-    <%= f.text_field :zip, autofocus: true %>
+    <%= f.label :zip, :class => "ds-c-label" %>
+    <%= f.text_field :zip, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, :class => "ds-c-label" %>
+    <%= f.email_field :email, autocomplete: "email", :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password, :class => "ds-c-label" %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, :class => "ds-c-field" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :password_confirmation, :class => "ds-c-label" %>
+    <%= f.password_field :password_confirmation, :class => "ds-c-field" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up", id: 'sign-up' %>
+  <div class="actions ds-u-margin-top--3">
+    <%= f.submit "Sign up", id: 'sign-up', :class => "ds-c-button ds-c-button--primary" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="ds-u-margin-y--5">
+  <%= render "devise/shared/links" %>
+</div>
