--- a/dpc-web/app/views/devise/shared/_links.html.erb
+++ b/dpc-web/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,11 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <h2>Already have an account?</h2>
+  <%= link_to "Log in", new_session_path(resource_name), class: "ds-c-button" %>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name), id: 'sign-up' %><br />
+  <h2>New user?</h2>
+  <%= link_to "Sign up", new_registration_path(resource_name), id: 'sign-up', class: "ds-c-button" %>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
