--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -126,7 +126,7 @@
         <li class="site-process-list__item">
           <h3 class="site-process-list__heading">Request access to the pilot</h3>
           <div class="site-process-list__body">
-            <p>Do this on the <a href="#">Request Access Page</a>. Remember, this is a pilot and and the process may move slowly. You can prepare for connection by reviewing the <%= link_to "API documentation", docs_path %>.</p>
+            <p>Do this on the <%= link_to "Request access page", new_registration_path(User) %>. Remember, this is a pilot and and the process may move slowly. You can prepare for connection by reviewing the <%= link_to "API documentation", docs_path %>.</p>
           </div>
         </li>
         <li class="site-process-list__item">
@@ -209,7 +209,7 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
       <div class="billboard__content">
         <h2 class="billboard__heading">Join the community!</h2>
         <div>
-        <%= link_to docs_path, :class => "ds-c-button ds-c-button--primary ds-c-button--big ds-u-margin-right--2" do %>
+        <%= link_to new_registration_path(User), :class => "ds-c-button ds-c-button--primary ds-c-button--big ds-u-margin-right--2" do %>
           <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <use xlink:href="/assets/solid.svg#key"></use>
           </svg>Request access
