--- a/dpc-web/app/views/pages/support.html.erb
+++ b/dpc-web/app/views/pages/support.html.erb
@@ -7,7 +7,7 @@
 <p>The Data at the Point of Care (DPC) Google Group is the best place to get your questions answered by the DPC team. In this community you can sign up for feedback session opportunities, get answers to your questions, share your feedback and ideas, and get updates on the project.</p>
 
 <div class="ds-u-margin-top--5">
-  <a href="#" class="ds-c-button ds-c-button--big">Join Google group</a>
+  <a href="https://groups.google.com/d/forum/dpc-api" class="ds-c-button ds-c-button--big">Join Google group</a>
 </div>
 
 <h2 class="ds-u-margin-top--7">Have other questions?</h2>
