style error alert

--- a/dpc-web/app/assets/stylesheets/application.scss
+++ b/dpc-web/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
  @import "settings/variables";
  @import "base/base";
  @import "components/accordions";
+ @import "components/alerts";
  @import "components/benefit-prop";
  @import "components/billboard";
  @import "components/buttons";
