--- a/ig/source/pages/_includes/publish-box.html
+++ b/ig/source/pages/_includes/publish-box.html
@@ -1,5 +1,4 @@
 <p id="publish-box">
-This is the Continuous Integration Build <!-- Current officially released version --> of the {{site.data.fhir.igName}} Implementation Guide, based on FHIR Version 3.0.0. See the Directory of published versions  based on <a
-    href="{{ site.data.fhir.path }}">FHIR Version {{ site.data.fhir.version }}</a>. See the <a href="#">Directory of published versions <img
-      src="external.png" /></a>
+This is the Continuous Integration Build <!-- Current officially released version --> of the {{site.data.fhir.igName}} Implementation Guide, based on FHIR Version {{ site.data.fhir.version }}. See the Directory of published versions  based on <a
+    href="{{ site.data.fhir.path }}">FHIR Version {{ site.data.fhir.version }}</a>.
 </p>
