--- a/dpc-web/app/views/dpc_registrations/show.html.erb
+++ b/dpc-web/app/views/dpc_registrations/show.html.erb
@@ -16,6 +16,7 @@
     Registration Details:<br/>
     <%= @dpc_registration.user.name %><br/>
     <%= @dpc_registration.user.organization %><br/>
+    <%= @dpc_registration.user.organization_type.humanize %><br/>
     <%= @dpc_registration.user.address_1 %><br/>
     <%= @dpc_registration.user.address_2 %><br/>
     <%= @dpc_registration.user.city %>, <%= @dpc_registration.user.state %> <%= @dpc_registration.user.zip %>
