--- a/ig/framework/assets/css/project.css
+++ b/ig/framework/assets/css/project.css
@@ -539,3 +539,68 @@ td {
   .navbar .collapse.in {
     margin-top: 60px;
   }
+
+  /* Tables */
+  table {
+    border-collapse: collapse;
+    font-size: 16px;
+    line-height: 1.5;
+    border-spacing: 0;
+    margin: 1.25rem 0;
+  }
+
+  table caption {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+
+  table thead th {
+    border: 1px solid #5c5c5c;
+    background-color: #f0f0f0;
+    padding: 8px 16px;
+  }
+
+  table tbody th,
+  table tbody td,
+  table tfoot th,
+  table tfoot td {
+    border: 1px solid #5c5c5c;
+    padding: 8px 16px;
+    font-weight: normal;
+  }
+
+  /* Tabs overrides */
+  .nav-tabs {
+    border-bottom-color: #AEB0B5;
+  }
+
+  .nav-tabs > li > a {
+    color: #205493
+  }
+
+  .nav-tabs > li.active,
+  .nav-tabs > li.active > a,
+  .nav-tabs > li.active > a:hover,
+  .nav-tabs > li.active > a:focus {
+    border: 1px solid #AEB0B5;
+    border-bottom: 1px solid white;
+    color: #212121;
+    font-weight: bold;
+  }
+
+  .nav-tabs > li.active {
+    border: 0;
+  }
+
+  .nav-tabs li a:hover,
+  .nav-tabs li a:focus {
+    border-bottom-color: #AEB0B5;
+  }
+
+  /* pre overrides */
+  pre {
+    padding: 16px !important;
+    font-size: 14px !important;
+  }
