add faq link and update some text

--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -78,7 +78,7 @@
       <div class="site-block-header">
         <h2 class="site-block-header__heading">About the pilot</h2>
         <div class="site-block-header__description">
-          <p> Data at the Point of Care is a pilot API program that enables healthcare providers to deliver high quality care directly to Medicare beneficiaries by making a patient’s Medicare claims data available to the provider for treatment needs. The information can be accessed in the existing workflow and without logging into another application or portal. Claims information can be used to confirm information, fill in gaps in care, and improve patient safety.</p>
+          <p> Data at the Point of Care is a pilot API program that enables healthcare providers to deliver high quality care directly to Medicare beneficiaries by making a patient’s Medicare claims data available to the provider for treatment needs. The information can be accessed in the existing workflow and without logging into another application or portal. Claims information can be used to confirm information, fill in gaps in care, and improve patient safety. For more information about the pilot <%= link_to "read our FAQ", faq_path %>.</p>
         </div>
 
         <div class="usa-accordion usa-accordion--bordered">
@@ -130,7 +130,7 @@
           </div>
         </li>
         <li class="site-process-list__item">
-          <h3 class="site-process-list__heading">You will be contacted</h3>
+          <h3 class="site-process-list__heading">We’ll reach out to you</h3>
           <div class="site-process-list__body">
             <p>Based on the specification and sample data, build and test with synthetic data.</p>
           </div>
